added more documentation
